--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="images/favicon.png">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <meta name="msapplication-TileImage" content="images/mstile.png">
-    
+
     <!-- Page styles -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -23,8 +23,8 @@
 <body>
     <!-- Old Browser Warning -->
     <!--[if lt IE 9]>
-        <section class="container-fluid text-center color-danger"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> for a faster, better, and safer web experience.</p>
-        </section>
+        <div class="container-fluid text-center color-danger"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> for a faster, better, and safer web experience.</p>
+        </div>
     <![endif]-->
     <header class="page-header" role="banner">
         <div class="logo">
@@ -35,18 +35,18 @@
         </div>
         <nav class="primary-nav nav-responsive" role="navigation">
             <ul class="menu">
-                <li>
+                <li class="menu__item">
                     <a href="styleguide/index.html">Visual Style Guide &amp; Documentation</a>
                 </li>
-                <li>
+                <li class="menu__item">
                     <a href="styleguide/icons.html">Documentation for generated iconfont</a>
                 </li>
-                <li>
+                <li class="menu__item">
                     <a href="http://www.rae.fi">RAE Framework</a>
                     <ul class="dropdown">
-                        <li><a href="http://www.rae.fi">Just a subnav</a>
+                        <li class="menu__item"><a href="http://www.rae.fi">Just a subnav</a>
                         </li>
-                        <li><a href="http://www.rae.fi">Just a subnav</a>
+                        <li class="menu__item"><a href="http://www.rae.fi">Just a subnav</a>
                         </li>
                     </ul>
                 </li>
@@ -80,12 +80,17 @@
     </script>
 
     <!-- build:js scripts/scripts.min.js -->
-    <script src="scripts/vendor/modernizr-2.8.3.js"></script>
-    <script src="scripts/vendor/jquery-2.1.3.js"></script>
+    <!-- bower:js -->
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <!-- endinject -->
+    <!-- inject:js -->
+    <script src="scripts/_modernizr-custom.js"></script>
+    <script src="scripts/nav-responsive.js"></script>
     <script src="scripts/scripts.js"></script>
+    <!-- endinject -->
     <!-- endbuild -->
-    
-    <!-- Built with love using Rae Framework -->
+
 </body>
 
 </html>
+<!-- Built with love using Rae Framework -->
