--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,16 @@
     <title>RAE Framework</title>
 
     <meta charset="utf-8">
+    <meta name="author" content="..." />
+    <meta name="description" content="..." />
+    <link rel="canonical" href="http://rae.fi/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- favicon.png, apple-touch-icon.png & mstile.png, favicon.ico to root-folder -->
-    <link rel="icon" href="images/favicon.png">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <meta name="msapplication-TileImage" content="images/mstile.png">
 
     <!-- Page styles -->
     <link rel="stylesheet" href="styles/style.css">
+
+    <!-- Favicons are build automatically -->
 </head>
 
 <body>
@@ -53,91 +52,6 @@
     </header>
 
     <main class="page-content" role="main">
-        <div class="u-u-clearfix" style="margin-top: 24px; position: relative;">
-            <div class="google u-float-left">
-                <div class="color g50">@50</div>
-                <div class="color g100">@100</div>
-                <div class="color g200">@200</div>
-                <div class="color g300">@300</div>
-                <div class="color g400">@400</div>
-                <div class="color g500">@500</div>
-                <div class="color g600">@600</div>
-                <div class="color g700">@700</div>
-                <div class="color g800">@800</div>
-                <div class="color g900">@900</div>
-                <div class="color ga100">@A100</div>
-                <div class="color ga200">@A200</div>
-                <div class="color ga400">@A400</div>
-                <div class="color ga700">@A700</div>
-            </div>
-
-            <div class="tintshade u-float-left">
-                <div class="color">@50</div>
-                <div class="color">@100</div>
-                <div class="color">@200</div>
-                <div class="color">@300</div>
-                <div class="color">@400</div>
-                <div class="color">@500</div>
-                <div class="color">@600</div>
-                <div class="color">@700</div>
-                <div class="color">@800</div>
-                <div class="color">@900</div>
-                <div class="color">@A100</div>
-                <div class="color">@A200</div>
-                <div class="color">@A400</div>
-                <div class="color">@A700</div>
-            </div>
-
-            <div class="tintshade2 u-float-left">
-                <div class="color">@50</div>
-                <div class="color">@100</div>
-                <div class="color">@200</div>
-                <div class="color">@300</div>
-                <div class="color">@400</div>
-                <div class="color">@500</div>
-                <div class="color">@600</div>
-                <div class="color">@700</div>
-                <div class="color">@800</div>
-                <div class="color">@900</div>
-                <div class="color">@A100</div>
-                <div class="color">@A200</div>
-                <div class="color">@A400</div>
-                <div class="color">@A700</div>
-            </div>
-            <div class="tintshade3 u-float-left">
-                <div class="color">@50</div>
-                <div class="color">@100</div>
-                <div class="color">@200</div>
-                <div class="color">@300</div>
-                <div class="color">@400</div>
-                <div class="color">@500</div>
-                <div class="color">@600</div>
-                <div class="color">@700</div>
-                <div class="color">@800</div>
-                <div class="color">@900</div>
-                <div class="color">@A100</div>
-                <div class="color">@A200</div>
-                <div class="color">@A400</div>
-                <div class="color">@A700</div>
-            </div>
-            <div class="tintshade4 u-float-left">
-                <div class="color">@50</div>
-                <div class="color">@100</div>
-                <div class="color">@200</div>
-                <div class="color">@300</div>
-                <div class="color">@400</div>
-                <div class="color">@500</div>
-                <div class="color">@600</div>
-                <div class="color">@700</div>
-                <div class="color">@800</div>
-                <div class="color">@900</div>
-                <div class="color">@A100</div>
-                <div class="color">@A200</div>
-                <div class="color">@A400</div>
-                <div class="color">@A700</div>
-            </div>
-        </div>
-
 
     </main>
 
