--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -1714,6 +1714,20 @@
                                 </td>
                             </tr>
                             <tr>
+                                <td><code>.u-color-primary</code>
+                                </td>
+                                <td>
+                                    <div class="u-color-primary">Set text color to "Primay".</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><code>.u-color-secondary</code>
+                                </td>
+                                <td>
+                                    <div class="u-color-secondary">Set text color to "Secondary".</div>
+                                </td>
+                            </tr>
+                            <tr>
                                 <td><code>.u-color-success</code>
                                 </td>
                                 <td>
