--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,15 @@
 <head>
     <title>RAE Framework</title>
 
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="author" content="..." />
     <meta name="description" content="..." />
     <link rel="canonical" href="http://rae.fi/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Page styles -->
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
 
     <!-- Favicons are build automatically -->
 </head>
