rename responsive embed

--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -515,7 +515,7 @@
                 </header>
                 <div class="example">
                     <!-- Default aspect-ratio is 16:9 -->
-                    <div class="embed-responsive">
+                    <div class="embed-wrap">
                         <iframe src="http://player.vimeo.com/video/54690885?title=0&amp;byline=0&amp;portrait=0&amp;color=ff0179" width="500" height="281" allowfullscreen></iframe>
                     </div>
                 </div>
