--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     <title>RAE Framework</title>
 
     <meta charset="utf-8" />
-    <meta name="author" content="..." />
-    <meta name="description" content="..." />
+    <meta name="author" content="RAE – Jere Paajanen" />
+    <meta name="description" content="Simple frameworks" />
     <link rel="canonical" href="http://rae.fi/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
