--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -229,7 +229,7 @@
         }
 
         .docs-content .icons .magnify ul li {
-            display: table--cell;
+            display: table-cell;
             width: 1%;
             text-align: center;
         }
