grid half-gutters, new spacing unit

--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -586,6 +586,32 @@
                         </div>
                     </div>
                 </div>
+                <h4>Columns with half-gutters</h4>
+                <div class="example">
+                    <div class="row row--half-gutters">
+                        <div class="col-xl-4 col-lg-5 col-sm-6"></div>
+                        <div class="col-xl-8 col-lg-7 col-sm-6"></div>
+                        <div class="col-lg-7 col-md-6"></div>
+                        <div class="col-lg-5 col-md-6"></div>
+                        <div class="col-sm-4"></div>
+                        <div class="col-sm-4"></div>
+                        <div class="col-sm-4"></div>
+                    </div>
+                </div>
+                <!-- Under condiseration
+                <h4>Columns with double-gutters</h4>
+                <div class="example">
+                    <div class="row row--double-gutters">
+                        <div class="col-xl-4 col-lg-5 col-sm-6"></div>
+                        <div class="col-xl-8 col-lg-7 col-sm-6"></div>
+                        <div class="col-lg-7 col-md-6"></div>
+                        <div class="col-lg-5 col-md-6"></div>
+                        <div class="col-sm-4"></div>
+                        <div class="col-sm-4"></div>
+                        <div class="col-sm-4"></div>
+
+                    </div>
+                </div>-->
                 <h4>Columns without gutters</h4>
                 <div class="example">
                     <div class="row row--without-gutters">
@@ -593,8 +619,9 @@
                         <div class="col-xl-8 col-lg-7 col-sm-6"></div>
                         <div class="col-lg-7 col-md-6"></div>
                         <div class="col-lg-5 col-md-6"></div>
-                        <div class="col-md-4"></div>
-                        <div class="col-md-8"></div>
+                        <div class="col-sm-4"></div>
+                        <div class="col-sm-4"></div>
+                        <div class="col-sm-4"></div>
                     </div>
                 </div>
             </article>
