tweaks, version bump

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
 
     <meta charset="utf-8" />
     <meta name="author" content="RAE – Jere Paajanen" />
-    <meta name="description" content="Simple frameworks" />
-    <link rel="canonical" href="http://rae.fi/" />
+    <meta name="description" content="Simple framework" />
+    <link rel="canonical" href="http://www.rae.fi" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="styles/style.css" />
 
     <!-- Favicons are build automatically -->
+    <!-- inject:favicons -->
+
 </head>
 
 <body>
@@ -86,8 +88,7 @@
     <script src="scripts/scripts.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
-
 </body>
 
 </html>
-<!-- Built with love using Rae Framework -->
+<!-- Built with love with RAE Framework -->
