--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -1557,31 +1557,31 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td><code>.u-center-block</code>
-                                </td>
-                                <td>
-                                    <div class="u-center-block" style="max-width: 200px;">Set element horizontally center using margin and display block.</div>
-                                </td>
-                            </tr>
-                            <tr>
                                 <td><code>.u-flex-center</code>
                                 </td>
                                 <td>
-                                    <div class="u-flex-center" style="height: 64px;">Set element vertically center using flex-box.</div>
+                                    <div class="u-flex-center" style="height: 96px;">Set element content vertically center using flex-box.</div>
                                 </td>
                             </tr>
                             <tr>
                                 <td><code>.u-flex-top</code>
                                 </td>
                                 <td>
-                                    <div class="u-flex-top" style="height: 64px;">Set element vertically top using flex-box.</div>
+                                    <div class="u-flex-top" style="height: 96px;">Set element content vertically top using flex-box.</div>
                                 </td>
                             </tr>
                             <tr>
                                 <td><code>.u-flex-bottom</code>
                                 </td>
                                 <td>
-                                    <div class="u-flex-bottom" style="height: 64px;">Set element vertically bottom using flex-box.</div>
+                                    <div class="u-flex-bottom" style="height: 96px;">Set element vertically bottom using flex-box.</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><code>.u-center</code>
+                                </td>
+                                <td style="height: 96px; position:relative;">
+                                    <div class="u-center">Set element with unknown height and/or width vertically and horizontally center, inside parent element.</div>
                                 </td>
                             </tr>
                             <tr>
@@ -1683,6 +1683,27 @@
                                     <div class="u-color-info">Set text color to "Info".</div>
                                 </td>
                             </tr>
+                            <tr>
+                                <td><code>.u-disable-pointer-events</code>
+                                </td>
+                                <td>
+                                    <div class="u-disable-pointer-events">Pointer events disabled.</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><code>.u-no-user-select</code>
+                                </td>
+                                <td>
+                                    <div class="u-no-user-select">Selecting element is disabled.</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><code>.u-prevent-scroll</code>
+                                </td>
+                                <td>
+                                    <div class="u-prevent-scroll">Prevent container from scrolling.</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -1717,12 +1738,6 @@
                                 <td><code>.hide-text();</code>
                                 </td>
                                 <td>Hide text properly for css image replacement
-                                </td>
-                            </tr>
-                            <tr>
-                                <td><code>.vertically-centered();</code>
-                                </td>
-                                <td>Vertical align anything, even if you don’t know elements height
                                 </td>
                             </tr>
                             <tr>
