--- a/src/index.html
+++ b/src/index.html
@@ -8,26 +8,25 @@
     <title>RAE Framework</title>
 
     <meta charset="utf-8" />
-    <meta name="author" content="RAE – Jere Paajanen" />
-    <meta name="description" content="Simple framework" />
-    <link rel="canonical" href="http://www.rae.fi" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <!-- Page styles -->
-    <link rel="stylesheet" href="styles/style.css" />
+    <!-- @if ENV='development' -->
+    <link rel="stylesheet" href="styles/style.css">
+    <!-- @endif -->
+    <!-- @if ENV='production' -->
+    <link rel="stylesheet" href="styles/style.min.css">
+    <!-- @endif -->
 
-    <!-- Favicons are build automatically -->
-    <!-- inject:favicons -->
+    <!-- @include partials/meta.html -->
+
+    <!-- @include partials/favicons.html -->
 
 </head>
 
 <body>
-    <!-- Old Browser Warning -->
-    <!--[if lt IE 9]>
-        <div class="container--fluid u-text-center u-color-danger"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> for a faster, better, and safer web experience.</p>
-        </div>
-    <![endif]-->
+    <!-- @include partials/browserhappy.html -->
+
     <header class="page-header" role="banner">
         <div class="logo">
             <a href="/">
@@ -61,32 +60,17 @@
 
     </footer>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'http://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-XXXXX-X', 'auto');
-        ga('send', 'pageview');
-    </script>
 
-    <!-- build:js scripts/scripts.min.js -->
-    <!-- bower:js -->
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <!-- endinject -->
-    <!-- inject:js -->
-    <script src="scripts/nav-responsive.js"></script>
-    <script src="scripts/scripts.js"></script>
-    <!-- endinject -->
-    <!-- endbuild -->
+    <!-- @if ENV='development' -->
+    <script src="scripts/vendor.js"></script>
+    <script src="scripts/main.js"></script>
+    <!-- @endif -->
+    <!-- @if ENV='production' -->
+    <script src="scripts/vendor.min.js"></script>
+    <script src="scripts/main.min.js"></script>
+
+
+    <!-- @include partials/analytics.html -->
 </body>
 
 </html>
