Separate utils, grid. Button, grid namespacing and minor fixes

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,7 @@
     <!-- @if ENV='production' -->
     <script src="scripts/vendor.min.js"></script>
     <script src="scripts/main.min.js"></script>
+    <!-- @endif -->
 
 
     <!-- @include partials/analytics.html -->
