add new utility classes

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- @if ENV='development' -->
     <link rel="stylesheet" href="styles/style.css">
@@ -27,7 +27,7 @@
 <body>
     <!-- @include partials/browserhappy.html -->
 
-    <header class="page-header" role="banner">
+    <header id="header" class="header" role="banner">
         <div class="logo">
             <a href="/">
                 <img src="images/logo.svg" alt="Logo" style="height: 24px;">
@@ -52,11 +52,11 @@
         </nav>
     </header>
 
-    <main class="page-content" role="main">
+    <main id="site-content" class="site-content" role="main">
 
     </main>
 
-    <footer class="page-footer" role="contentinfo">
+    <footer id="footer" class="footer" role="contentinfo">
 
     </footer>
 
