--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -1622,23 +1622,40 @@
                                 <td><code>.u-text-left</code>
                                 </td>
                                 <td>
-                                    <div class="u-text-left">Aligns text to the left left</div>
+                                    <div class="u-text-left">Aligns text to the left left.</div>
                                 </td>
                             </tr>
                             <tr>
                                 <td><code>.u-text-center</code>
                                 </td>
                                 <td>
-                                    <div class="u-text-center">Centers the text</div>
+                                    <div class="u-text-center">Centers the text.</div>
                                 </td>
                             </tr>
                             <tr>
-                                <td><code>.u-text-right</code>
+                                <td><code>.u-text-justify</code>
                                 </td>
                                 <td>
-                                    <div class="u-text-right">Aligns text to the right</div>
+                                    <div class="u-text-justify">Justified text.</div>
                                 </td>
                             </tr>
+                            <tr>
+                                <td><code>.u-text-truncate</code>
+                                </td>
+                                <td >
+                                    <div class="u-text-truncate">Truncate too long texts with three dots..</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><code>.u-text-nowrap</code>
+                                </td>
+                                <td>
+                                    <div class="u-text-nowrap">Text will never wrap to the next line.
+</div>
+                                </td>
+                            </tr>
+
+
                             <tr>
                                 <td><code>.u-text-light</code>
                                 </td>
